--- a/index.html
+++ b/index.html
@@ -5,19 +5,273 @@
     <title>Cheyoon's Portfolio</title>
     <meta name="description" content="Portfolio for Cheyoon" />
     <meta name="author" content="Jung Cheyoon" />
-    <link rel="icon" type="img/png" href="image/favicon.png" />
+    <link rel="icon" href="image/seedling-favsvg.svg" />
+    <!--fontawesome link-->
     <script
       src="https://kit.fontawesome.com/b4315a7b89.js"
       crossorigin="anonymous"
     ></script>
+    <!--google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Jua&family=Open+Sans:wght@400;600;700&family=Poor+Story&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!--Navbar-->
+    <nav id="navbar">
+      <div class="navbar__logo">
+        <i class="fas fa-seedling"></i>
+        <a href="#">Cheyoon</a>
+      </div>
+      <ul class="navbar__menu">
+        <li class="navbar__menu__item">Home</li>
+        <li class="navbar__menu__item">About</li>
+        <li class="navbar__menu__item">Skills</li>
+        <li class="navbar__menu__item">Work</li>
+        <li class="navbar__menu__item">Contact</li>
+      </ul>
+    </nav>
+
+    <!--Home-->
+    <section id="home">
+      <img
+        src="image/profile_pic.jpg"
+        alt="Cheyoon's profile photo"
+        class="home__avatar"
+      />
+      <h1 class="home__title">
+        Hello,<br />
+        I am Cheyoon
+      </h1>
+      <h2 class="home__description">I learn to code and I love to design</h2>
+      <button class="home__contact">Contact me</button>
+    </section>
+    <!--About-->
+    <section id="about" class="section section__container">
+      <h1>About me</h1>
+      <p>
+        Thank you for visiting my first website! After 2 years in the Design
+        industry, I decided to make a change and become a programmer. I do
+        self-learning continuously since 2021 september
+      </p>
+      <div class="about__majors">
+        <div class="major">
+          <div class="major__icon">
+            <i class="fas fa-laptop-code"></i>
+          </div>
+          <h2 class="major__title">Front-end</h2>
+          <div class="major__description">Html,Css,Javascript</div>
+        </div>
+        <div class="major">
+          <div class="major__icon">
+            <i class="fas fa-pen-nib"></i>
+          </div>
+          <h2 class="major__title">Design</h2>
+          <div class="major__description">
+            Photoshop, illustrator, Aftereffect,premiere,Cinema4D
+          </div>
+        </div>
+        <div class="major">
+          <div class="major__icon">
+            <i class="fas fa-thumbs-up"></i>
+          </div>
+          <h2 class="major__title">Interested</h2>
+          <div class="major__description">Travel,Yoga,Game</div>
+        </div>
+      </div>
+    </section>
+    <!--Skills-->
+    <section id="skills" class="section">
+      <div class="section-container">
+        <h1>Skills</h1>
+        <h2>Skills & Attribute</h2>
+        <p>
+          Experience with all phases of the software life-cycle. Passion for
+          learning new technologies. Capable of working within a team
+          environment and dependently. Ability to plan and time schedule, work
+          under strict time pressure and adapt quickly when needed.
+        </p>
+        <div class="skillset">
+          <div class="skillset__left">
+            <h3 class="skillset__title">Skills</h3>
+            <div class="skill">
+              <div class="skill__description">
+                <span>HTNL</span>
+                <span>99%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 99%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>CSS</span>
+                <span>90%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 90%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>Javascript</span>
+                <span>80%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 80%"></div>
+              </div>
+            </div>
+          </div>
+          <div class="skillset__right">
+            <div class="tools">
+              <h3 class="skillset__title">Tools</h3>
+              <ul class="tools__list">
+                <li><span>Webstorm</span></li>
+              </ul>
+            </div>
+            <div class="etc">
+              <h3 class="skillset__title">Etc</h3>
+              <ul class="etc__list">
+                <li><span>Git</span></li>
+                <li><span>Adobe Photoshop</span></li>
+                <li><span>Adobe Illustrator</span></li>
+                <li><span>Adobe Aftereffect</span></li>
+                <li><span>Adobe Premiere</span></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Work-->
+    <section id="work" class="section">
+      <div class="section__container">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work--categories">
+          <button class="categories__btn active">
+            All<span class="category__count">8</span>
+          </button>
+          <button class="categories__btn">
+            Javascript<span class="category__count">3</span>
+          </button>
+          <button class="categories__btn">
+            Javascript<span class="category__count">1</span>
+          </button>
+          <button class="categories__btn">
+            Javascript<span class="category__count">4</span>
+          </button>
+        </div>
+        <div class="work__projects">
+          <a href="#" class="project" target="_blank">
+            <img
+              class="project__img"
+              src="image/projects/project1.png"
+              alt="my bla project"
+            />
+            <div class="project__description">
+              <h3>bla site</h3>
+              <span>html css bla bla</span>
+            </div>
+          </a>
+          <a href="#" class="project" target="_blank">
+            <img
+              class="project__img"
+              src="image/projects/project2.png"
+              alt="my bla project"
+            />
+            <div class="project__description">
+              <h3>bla site</h3>
+              <span>html css bla bla</span>
+            </div>
+          </a>
+          <a href="#" class="project" target="_blank">
+            <img
+              class="project__img"
+              src="image/projects/project3.png"
+              alt="my bla project"
+            />
+            <div class="project__description">
+              <h3>bla site</h3>
+              <span>html css bla bla</span>
+            </div>
+          </a>
+          <a href="#" class="project" target="_blank">
+            <img
+              class="project__img"
+              src="image/projects/project4.png"
+              alt="my bla project"
+            />
+            <div class="project__description">
+              <h3>bla site</h3>
+              <span>html css bla bla</span>
+            </div>
+          </a>
+          <a href="#" class="project" target="_blank">
+            <img
+              class="project__img"
+              src="image/projects/project5.png"
+              alt="my bla project"
+            />
+            <div class="project__description">
+              <h3>bla site</h3>
+              <span>html css bla bla</span>
+            </div>
+          </a>
+          <a href="#" class="project" target="_blank">
+            <img
+              class="project__img"
+              src="image/projects/project6.png"
+              alt="my bla project"
+            />
+            <div class="project__description">
+              <h3>bla site</h3>
+              <span>html css bla bla</span>
+            </div>
+          </a>
+          <a href="#" class="project" target="_blank">
+            <img
+              class="project__img"
+              src="image/projects/project7.png"
+              alt="my bla project"
+            />
+            <div class="project__description">
+              <h3>bla site</h3>
+              <span>html css bla bla</span>
+            </div>
+          </a>
+          <a href="#" class="project" target="_blank">
+            <img
+              class="project__img"
+              src="image/projects/project8.png"
+              alt="my bla project"
+            />
+            <div class="project__description">
+              <h3>bla site</h3>
+              <span>html css bla bla</span>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!--Contact-->
+    <section id="contact" class="section">
+      <h1 class="contact__title">Let's talk</h1>
+      <h2 class="contact__email">jessietwo94@gmail.com</h2>
+      <div class="contact__link">
+        <a href="#" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="#" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+      <p class="contact__bottom">Copyright © 2022, Cheyoon Jung</p>
+    </section>
+  </body>
 </html>
