--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         <li class="navbar__menu__item">Work</li>
         <li class="navbar__menu__item">Contact</li>
       </ul>
+      <!--Toggle button-->
+      <button class="navbar__toggle-btn">
+        <i class="fas fa-bars"></i>
+      </button>
     </nav>
 
     <!--Home-->
@@ -264,10 +268,13 @@
       <h1 class="contact__title">Let's talk</h1>
       <h2 class="contact__email">jessietwo94@gmail.com</h2>
       <div class="contact__link">
-        <a href="#" target="_blank">
+        <a href="https://github.com/JCheyoon" target="_blank">
           <i class="fab fa-github"></i>
         </a>
-        <a href="#" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/cheyoon-jung-11148b19b/"
+          target="_blank"
+        >
           <i class="fab fa-linkedin"></i>
         </a>
       </div>
