--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <a href="#">Cheyoon</a>
       </div>
       <ul class="navbar__menu">
-        <li class="navbar__menu__item">Home</li>
-        <li class="navbar__menu__item">About</li>
-        <li class="navbar__menu__item">Skills</li>
-        <li class="navbar__menu__item">Work</li>
-        <li class="navbar__menu__item">Contact</li>
+        <li class="navbar__menu__item active" data-link="#home">Home</li>
+        <li class="navbar__menu__item" data-link="#about">About</li>
+        <li class="navbar__menu__item" data-link="#skills">Skills</li>
+        <li class="navbar__menu__item" data-link="#work">Work</li>
+        <li class="navbar__menu__item" data-link="#contact">Contact</li>
       </ul>
       <!--Toggle button-->
       <button class="navbar__toggle-btn">
@@ -43,17 +43,19 @@
 
     <!--Home-->
     <section id="home">
-      <img
-        src="image/profile_pic.jpg"
-        alt="Cheyoon's profile photo"
-        class="home__avatar"
-      />
-      <h1 class="home__title">
-        Hello,<br />
-        I am Cheyoon
-      </h1>
-      <h2 class="home__description">I learn to code and I love to design</h2>
-      <button class="home__contact">Contact me</button>
+      <div class="home__container">
+        <img
+          src="image/profile_pic.jpg"
+          alt="Cheyoon's profile photo"
+          class="home__avatar"
+        />
+        <h1 class="home__title">
+          Hello,<br />
+          I am Cheyoon
+        </h1>
+        <h2 class="home__description">I learn to code and I love to design</h2>
+        <button class="home__contact" data-link="#contact">Contact me</button>
+      </div>
     </section>
     <!--About-->
     <section id="about" class="section section__container">
@@ -158,21 +160,21 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work--categories">
-          <button class="categories__btn active">
+          <button class="categories__btn selected" data-filter="*">
             All<span class="category__count">8</span>
           </button>
-          <button class="categories__btn">
-            Javascript<span class="category__count">3</span>
+          <button class="categories__btn" data-filter="javascript">
+            Javascript<span class="category__count">5</span>
           </button>
-          <button class="categories__btn">
-            Javascript<span class="category__count">1</span>
+          <button class="categories__btn" data-filter="react">
+            React<span class="category__count">1</span>
           </button>
-          <button class="categories__btn">
-            Javascript<span class="category__count">4</span>
+          <button class="categories__btn" data-filter="typescript">
+            Typescript<span class="category__count">2</span>
           </button>
         </div>
         <div class="work__projects">
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-type="javascript">
             <img
               class="project__img"
               src="image/projects/project1.png"
@@ -183,7 +185,7 @@
               <span>html css bla bla</span>
             </div>
           </a>
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-type="typescript">
             <img
               class="project__img"
               src="image/projects/project2.png"
@@ -194,7 +196,7 @@
               <span>html css bla bla</span>
             </div>
           </a>
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-typer="javascript">
             <img
               class="project__img"
               src="image/projects/project3.png"
@@ -205,7 +207,7 @@
               <span>html css bla bla</span>
             </div>
           </a>
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-type="react">
             <img
               class="project__img"
               src="image/projects/project4.png"
@@ -216,7 +218,7 @@
               <span>html css bla bla</span>
             </div>
           </a>
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-type="javascript">
             <img
               class="project__img"
               src="image/projects/project5.png"
@@ -227,7 +229,7 @@
               <span>html css bla bla</span>
             </div>
           </a>
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-type="typescript">
             <img
               class="project__img"
               src="image/projects/project6.png"
@@ -238,7 +240,7 @@
               <span>html css bla bla</span>
             </div>
           </a>
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-type="javascript">
             <img
               class="project__img"
               src="image/projects/project7.png"
@@ -249,7 +251,7 @@
               <span>html css bla bla</span>
             </div>
           </a>
-          <a href="#" class="project" target="_blank">
+          <a href="#" class="project" target="_blank" data-type="javascript">
             <img
               class="project__img"
               src="image/projects/project8.png"
@@ -280,5 +282,9 @@
       </div>
       <p class="contact__bottom">Copyright © 2022, Cheyoon Jung</p>
     </section>
+    <!--Arrow up button-->
+    <button class="arrow-up">
+      <i class="fas fa-angle-up"></i>
+    </button>
   </body>
 </html>
