--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <h3 class="skillset__title">Skills</h3>
             <div class="skill">
               <div class="skill__description">
-                <span>HTNL</span>
+                <span>HTML</span>
                 <span>99%</span>
               </div>
               <div class="skill__bar">
