--- a/index.html
+++ b/index.html
@@ -108,28 +108,28 @@
             <div class="skill">
               <div class="skill__description">
                 <span>HTML</span>
-                <span>99%</span>
+                <span>0%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 99%"></div>
+                <div class="skill__value value__html"></div>
               </div>
             </div>
             <div class="skill">
               <div class="skill__description">
                 <span>CSS</span>
-                <span>90%</span>
+                <span>0%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 90%"></div>
+                <div class="skill__value value__css"></div>
               </div>
             </div>
             <div class="skill">
               <div class="skill__description">
                 <span>Javascript</span>
-                <span>80%</span>
+                <span>0%</span>
               </div>
               <div class="skill__bar">
-                <div class="skill__value" style="width: 80%"></div>
+                <div class="skill__value value__javascript"></div>
               </div>
             </div>
           </div>
