update project link

--- a/index.html
+++ b/index.html
@@ -196,15 +196,20 @@
               <span>html css bla bla</span>
             </div>
           </a>
-          <a href="#" class="project" target="_blank" data-typer="javascript">
+          <a
+            href="https://jcheyoon.github.io/ACNH/"
+            class="project"
+            target="_blank"
+            data-type="javascript"
+          >
             <img
               class="project__img"
-              src="image/projects/project3.png"
-              alt="my bla project"
+              src="image/projects/project-acnh.png"
+              alt="ACNH guide site"
             />
             <div class="project__description">
-              <h3>bla site</h3>
-              <span>html css bla bla</span>
+              <h3>ACNH Guide</h3>
+              <span>Animal Crossing game guide</span>
             </div>
           </a>
           <a href="#" class="project" target="_blank" data-type="react">
